Fixing Windows display issues (#81)
I finally tested out on my Windows machine and noticed that there were
duplicate scrollbars for a few items and some other display issues. Now
the view is much better though i still don't like the always visible
scrollbars

--- a/scss/components/widget_view.scss
+++ b/scss/components/widget_view.scss
@@ -1,27 +1,31 @@
-.widget-view {
-  width: 100%;
-  overflow-y: scroll;
-  padding-left: 1em;
-  padding-right: 1em;
-  clip-path: inset(0 0 0 0);
-}
-
-$widget-title-left-overflow: 0.5em;
-.widget-title {
-  position: fixed;
-  top: 0;
-  background-color: var(--bs-body-bg);
-  width: 100%;
-  z-index: 100;
-  /* prevent widget body elements that may overflow the margin from appearing behind the title bar */
-  margin-left: -$widget-title-left-overflow;
-  padding-top: 0.25em;
-  padding-bottom: 0.25em;
-  padding-left: $widget-title-left-overflow;
-}
-
-.widget-body {
-  padding-top: 3em;
+div.widget-view {
+  @extend .ps-3, .pe-3;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: clip;
+
+  $widget-title-left-overflow: 0.5em;
+  $widget-title-padding: 0.25em;
+  .widget-title {
+    position: sticky;
+    top: 0;
+    background-color: var(--bs-body-bg);
+    width: calc(100% + (2 * #{$widget-title-left-overflow}));
+    z-index: 100;
+    /* prevent widget body elements that may overflow the margin from appearing behind the title bar */
+    margin-left: -$widget-title-left-overflow;
+    margin-bottom: 0;
+    margin-right: 0;
+    padding-top: $widget-title-padding;
+    padding-bottom: $widget-title-padding;
+    padding-left: $widget-title-left-overflow;
+  }
+
+  .widget-body {
+    width: 100%;
+    padding-top: 0.5em;
+    height: 1px;
+    min-height: calc(100% - 3em);
+  }
 }
