--- a/scss/pages/home_page.scss
+++ b/scss/pages/home_page.scss
@@ -1,5 +1,6 @@
 .home-page {
   @extend .d-flex, .flex-row, .flex-wrap, .gap-2;
+  padding-bottom: 1em;
 
   .card {
     @extend .p-0;
